feat: [IOCOM-875] SEND Timeline with new DS (#5706)
⚠️ This PR depends on #5700  ⚠️

## Short description
This PR adds the SEND timeline to the SEND message details, with the new
DS.

|Simple timeline|Long timeline|
|-|-|
|![Simulator Screenshot - iPhone 15 - 2024-04-18 at 17 27
17](https://github.com/pagopa/io-app/assets/5150343/fb9ae0b3-ee03-4357-9f55-a37c2ed98523)|![Simulator
Screenshot - iPhone 15 - 2024-04-18 at 17 24
22](https://github.com/pagopa/io-app/assets/5150343/427ccbaa-d8a9-49a8-855c-7ee887b107dd)|

## List of changes proposed in this pull request
- `TimelineListItem` component to handle both menu entry and bottom
sheet

## How to test
Using the io-dev-api-server, generate some SEND messages and check that
the timeline works as expected.

---------

Co-authored-by: Jacopo Pompilii <Jacopo.pompilii@pagopa.it>
Co-authored-by: Martino Cesari Tomba <60693085+forrest57@users.noreply.github.com>

--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2816,17 +2816,21 @@ features:
         iunAccessibility: Codice IUN, copia
         iunSectionTitle: Notifica
       timeline:
+        goToSend: "Accedi a SEND"
+        menuTitle: Stato della notifica
+        newInfo: "Accedi alla versione web per vedere maggiori dettagli, le ricevute e le attestazioni opponibili a terzi."
         title: STATO DELLA NOTIFICA
         status:
+          ACCEPTED: Depositata
+          CANCELLED: Annullata
           DELIVERED: Consegnata
           DELIVERING: Invio in corso
-          UNREACHABLE: Destinatario irreperibile
-          PAID: Pagata
-          ACCEPTED: Depositata
           EFFECTIVE_DATE: Perfezionata per decorrenza termini
+          UNREACHABLE: Destinatario irreperibile
           VIEWED: Avvenuto accesso
+          PAID: Pagata
           REFUSED: REFUSED
-          CANCELLED: Annullata
+          IN_VALIDATION: IN VALIDATION
         expand: mostra gli stati precedenti
         info: Puoi vedere il dettaglio di ciascuno stato, scaricare le ricevute e le attestazioni opponibili a terzi accedendo alla versione web del servizio
         cta: Accedi alla versione web
