--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2983,8 +2983,9 @@ features:
         success: ""
   itWallet:
     discovery:
-      title: Start with your Digital Identity
-      content: "Use SPID or CIE credentials to add your Digital Identity to the Wallet. **This is a necessary step to add your digital documents** (e.g. driving license) securely.\n### Good to know\nIn the future, you will be able to use the Digital Identity saved in your Wallet to identify yourself through IT Wallet functionality. \n\nFor more information, read the [Privacy Policy]() and the [Terms and Conditions of Use]()"
+      info:
+        title: Start with your Digital Identity
+        content: "Use SPID or CIE credentials to add your Digital Identity to the Wallet. **This is a necessary step to add your digital documents** (e.g. driving license) securely.\n### Good to know\nIn the future, you will be able to use the Digital Identity saved in your Wallet to identify yourself through IT Wallet functionality. \n\nFor more information, read the [Privacy Policy]() and the [Terms and Conditions of Use]()"
 webView:
   error:
     missingParams: Not all information necessary to access this page are available
