chore(IT Wallet): [SIW-1018] Add discovery info activation screen (#5696)
> [!WARNING]
> This PR depends on #5688 

## Short description
This PR adds the info screen with some details before to start the DIW
activation.

## List of changes proposed in this pull request
- Add ItwDiscoveryInfoScreen
- Add ItwNavigatorStack

## How to test
Using `io-dev-server-api` enable IT Wallet toggle in user profile screen
and tap IT Wallet item under Playground section. Tap on Discovery list
item and the discovery info screen should appears.

NOTE: in tos and privacy section the link not works because not yet
defined

---------

Co-authored-by: Federico Mastrini <federicomastrini93@gmail.com>

--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2985,6 +2985,11 @@ features:
       status:
         failure: FALLITA
         success: ""
+  itWallet:
+    discovery:
+      info:
+        title: Inizia dalla tua Identità Digitale
+        content: "Usa le credenziali SPID o CIE per aggiungere la tua Identità Digitale al Portafoglio. **È un passaggio necessario per aggiungere i tuoi documenti digitali** (ad esempio la patente di guida) in modo sicuro.\n### Utile da sapere \nIn futuro potrai usare l’Identità Digitale salvata nel Portafoglio per identificarti tramite la funzionalità IT Wallet. \n\nPer maggiori informazioni, leggi l’[informativa Privacy]() e i [Termini e Condizioni d’uso]()"
 webView:
   error:
     missingParams: Non sono presenti le informazioni necessarie per accedere a questa pagina
