--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1224,6 +1224,7 @@ wallet:
         title: "Payment method added successfully!"
         subtitle: ""
         primaryAction: "Vedi dettagli"
+        continueAction: "Continue"
       GENERIC_ERROR:
         title: Si è verificato un errore imprevisto
         subtitle: Riprova o contatta l'assistenza
