--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1945,6 +1945,11 @@ messageDetails:
   bottomSheet:
     title: "What's a dynamic message?"
     body: "It's a message that the sender can edit after you've received it. This way, the information it includes will always be up-to-date.\n\nThe sender can edit the information in a dynamic message only in specific cases. For example, to change outdated information or replace an attachment that is no longer valid.\n\nIf the sender needs to share new information or important updates with you, you'll receive a new message."
+    bodyPt1: "It's a message that the sender can edit "
+    bodyPt2: "after you've received it"
+    bodyPt3: ". This way, the information it includes will always be up-to-date.\n\nThe sender can edit the information in a dynamic message only " 
+    bodyPt4: "specific cases" 
+    bodyPt5: ". For example, to change outdated information or replace an attachment that is no longer valid.\n\nIf the sender needs to share new information or important updates with you, you'll receive a new message." 
   footer:
     contacts: "Contact the sender"
     showMoreData: "Show more data"
